[project]
name = "reroute53"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.36.2",
    "boto3-stubs[route53]>=1.36.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "sentry-sdk>=2.20.0",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "rich>=13.9.4",
    "ruff>=0.9.2",
]
